2005-09-01  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Merge patches by Matthias Clasen and Manish Singh from GNOME CVS:

	* io-bmp.c (DecodeColormap): Initialize the colormap to
	zero.  (#171762, David Costanzo)
	* io-bmp.c (DoCompressed): Use the correct update regions for
	compressed bmps.  (#150664, Owen Taylor, test images provided
	by David Costanzo)
	* io-bmp.c (grow_buffer): reject 0-sized buffers as corrupt header
	data. Fixes bug #171707.
	N#18487

2005-08-18  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* io-ico.c (DecodeHeader): Check for header size overflow.
	N#17078

2005-03-01  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.6.4 ===

2005-02-28  Matthias Clasen  <mclasen@redhat.com>

	* pixops/*.S: Add .note.GNU-stack sections to Mark these as not 
	requiring an executable stack.
	
	* === Released 2.6.3 ===

2005-02-23  Matthias Clasen  <mclasen@redhat.com>

	* io-ico.c: Fix a typo.  (#168173, Ivan Wong)

2005-02-15  Matthias Clasen  <mclasen@redhat.com>

	* io-pnm.c (pnm_skip_whitespace): Don't read over the end of
	the buffer if '#' appears at the very end.  (#167141, Doug Morgan)

2005-02-07  Matthias Clasen  <mclasen@redhat.com>

	* io-pnm.c (pnm_read_next_value): Pass in the max number 
	of bytes to read.
	(pnm_read_ascii_scanline): And use it here to enable 
	parsing of pbm images without whitespace between the 
	pixels.  (#165803, Samuel Hym)

2005-02-04  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.6.2 ===

2005-01-22  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-loader.c (gdk_pixbuf_loader_new_with_type) 
	(gdk_pixbuf_loader_new_with_mime_type): Close the loader
	before unreffing it in the error case.  (#164915, Crispin 
	Flowerday)

2005-01-08  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.6.1 ===
	
2005-01-04  Matthias Clasen  <mclasen@redhat.com>

	* io-bmp.c (DecodeHeader): Error on compressed images with 
	negative height. Also make uncompressed images with data_offset